RESOLVED FIXED68138
DFG does not speculate aggressively enough on comparisons
https://bugs.webkit.org/show_bug.cgi?id=68138
Summary DFG does not speculate aggressively enough on comparisons
Filip Pizlo
Reported 2011-09-14 20:58:47 PDT
DFG will emit slow-path code for peephole comparisons even if we have a double prediction. For non-peephole double comparisons, we always take a slow path.
Attachments
the patch (13.26 KB, patch)
2011-09-14 21:35 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2011-09-14 21:35:32 PDT
Created attachment 107451 [details] the patch 75% speed-up on Kraken/ai-astar.
Filip Pizlo
Comment 2 2011-09-15 00:28:03 PDT
Landed in r95172
Adam Roben (:aroben)
Comment 3 2011-09-15 09:13:33 PDT
Note You need to log in before you can comment on or make changes to this bug.